Feito o endPoint para abaixar varios arquvos