@@ -13,7 +13,9 @@ import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
+import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/fichas")
@@ -30,9 +32,13 @@ public class FileController implements FileControllerDocs {
         return new UploadFileResponseDTO(fileName, fileDownloadURI, file.getContentType(), file.getSize());
     }
 
+    @PostMapping("/uploadMultipleFiles")
     @Override
-    public List<UploadFileResponseDTO> uploadMultipleFile(MultipartFile[] file) {
-        return List.of();
+    public List<UploadFileResponseDTO> uploadMultipleFile(MultipartFile[] files) {
+        return Arrays.asList(files)
+                .stream()
+                .map(file -> uploadFile(file))
+                .collect(Collectors.toList());
     }
 
     @Override
